// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Command List renders a command 1`] = `
<div>
  <div
    class="react-command-palette"
  >
    <button
      class="atom-trigger"
      type="button"
    >
      Command Palette  
      <kbd
        class="ui mini horizontal grey label"
      >
        <span
          style="position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); display: inline-block;"
        >
           Keyboard Shortcut 
        </span>
        ⇧⌘P
      </kbd>
    </button>
  </div>
</div>
`;

exports[`Loading indicator should display a custom react component when props.spinner is set 1`] = `
<div
  class="spinner atom-spinner modal"
  role="status"
>
  <span
    class="sr-only"
  >
    Loading...
  </span>
  <b>
    Waiting
  </b>
</div>
`;

exports[`Loading indicator should display a custom string when props.spinner is set 1`] = `
<div
  class="spinner atom-spinner modal"
  role="status"
>
  Waiting
</div>
`;

exports[`Loading indicator should display the spinner by default 1`] = `
<div
  class="default-spinner atom-spinner modal"
  role="status"
>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Opening the palette displays the suggestion list 1`] = `
<div>
  <div
    class="react-command-palette"
  >
    <button
      class="atom-trigger"
      type="button"
    >
      Command Palette  
      <kbd
        class="ui mini horizontal grey label"
      >
        <span
          style="position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); display: inline-block;"
        >
           Keyboard Shortcut 
        </span>
        ⇧⌘P
      </kbd>
    </button>
  </div>
</div>
`;

exports[`props.display should not display the command palette in react-modal when false 1`] = `
<div>
  <div
    class="react-command-palette"
  >
    <div>
      <div
        class="atom-header"
      />
      <div
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="react-autowhatever-1"
        class="atom-container atom-containerOpen"
        role="combobox"
      >
        <input
          aria-activedescendant="react-autowhatever-1--item-0"
          aria-autocomplete="list"
          aria-controls="react-autowhatever-1"
          autocomplete="off"
          class="atom-input atom-inputOpen atom-inputFocused"
          placeholder="Type a command"
          type="text"
          value=""
        />
        <div
          class="atom-suggestionsContainer atom-suggestionsContainerOpen"
          id="react-autowhatever-1"
          role="listbox"
        >
          <ul
            class="atom-suggestionsList"
            role="listbox"
          >
            <li
              aria-selected="true"
              class="atom-suggestion atom-suggestionFirst atom-suggestionHighlighted"
              data-suggestion-index="0"
              id="react-autowhatever-1--item-0"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Start All Data Imports
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="1"
              id="react-autowhatever-1--item-1"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Stop All Data Imports
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="2"
              id="react-autowhatever-1--item-2"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Delete All Tenant
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="3"
              id="react-autowhatever-1--item-3"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Go offline
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="4"
              id="react-autowhatever-1--item-4"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Go online
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="5"
              id="react-autowhatever-1--item-5"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  Jump to Tenant
                </span>
              </div>
            </li>
            <li
              aria-selected="false"
              class="atom-suggestion"
              data-suggestion-index="6"
              id="react-autowhatever-1--item-6"
              role="option"
            >
              <div
                class="item"
              >
                <span>
                  View Logs 
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`props.header should render the header 1`] = `
<div
  class="atom-header"
>
  <div
    style="font-family: arial; font-size: 12px; color: rgb(172, 172, 172); margin-bottom: 6px; display: inline-block;"
  >
    <span
      style="padding-right: 32px;"
    >
      Search for a command
    </span>
    <span
      style="padding-right: 32px;"
    >
      <kbd
        style="background-color: rgb(23, 23, 23); font-size: 12px; color: rgb(185, 185, 185); padding: 2px 4px; margin-right: 6px; border-radius: 4px;"
      >
        ↑↓
      </kbd>
       to navigate
    </span>
    <span
      style="padding-right: 32px;"
    >
      <kbd
        style="background-color: rgb(23, 23, 23); font-size: 12px; color: rgb(185, 185, 185); padding: 2px 4px; margin-right: 6px; border-radius: 4px;"
      >
        enter
      </kbd>
       to select
    </span>
    <span
      style="padding-right: 32px;"
    >
      <kbd
        style="background-color: rgb(23, 23, 23); font-size: 12px; color: rgb(185, 185, 185); padding: 2px 4px; margin-right: 6px; border-radius: 4px;"
      >
        esc
      </kbd>
       to dismiss
    </span>
  </div>
</div>
`;

exports[`props.reactModalParentSelector should render render reat-modal in the target element. 1`] = `
<div>
  <div
    class="react-command-palette"
  >
    <button
      class="atom-trigger"
      type="button"
    >
      Command Palette  
      <kbd
        class="ui mini horizontal grey label"
      >
        <span
          style="position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); display: inline-block;"
        >
           Keyboard Shortcut 
        </span>
        ⇧⌘P
      </kbd>
    </button>
  </div>
</div>
`;

exports[`props.theme should render a custom theme 1`] = `
<div>
  <div
    class="react-command-palette"
  >
    <button
      class="chrome-trigger"
      type="button"
    >
      Command Palette  
      <kbd
        class="ui mini horizontal grey label"
      >
        <span
          style="position: absolute !important; height: 1px; width: 1px; overflow: hidden; clip: rect(1px, 1px, 1px, 1px); display: inline-block;"
        >
           Keyboard Shortcut 
        </span>
        ⇧⌘P
      </kbd>
    </button>
  </div>
</div>
`;
